# Master2026-XAI-pipeline

./: .gitignore  CLAUDE.md  README.md  analyze_xai.py  check_agg_diff.py  fix.slurm  fix_nnunet_confidence.py  generate_xai_data.py  inference.py  inspect_npz.py  main.py  pyproject.rocm.toml  pyproject.toml  update_zones_umamba.py  view_npz.ipynb  visualize_attributions.ipynb  visualize_zone_patches.py
U_MambaMTL_XAI/: .gitignore  captum_xai.py  compute_xai_metrics.py  generate_xai_metrics-parallel.py  readme.md  xai_statistics.py
U_MambaMTL_XAI/experiments/p158/umamba_mtl/: config.yaml
U_MambaMTL_XAI/jobs/: job_swin.slurm
U_MambaMTL_XAI/shared_modules/: data_module.py  xai.py
jobs/: agg.slurm  all.slurm  job_all.slurm  job_nnunet.slurm  job_swin.slurm  job_umamba.slurm  job_umamba_test.slurm  nnunet.slurm  swin.slurm  umamba.slurm  umamba_test.slurm
logs/xai/: Swin_24124055_0.err  Swin_24124055_0.txt  Swin_24124055_1.err  Swin_24124055_1.txt  Swin_24124055_2.err  Swin_24124055_2.txt  Swin_24124055_3.err  Swin_24124055_3.txt  Swin_24124055_4.err  Swin_24124055_4.txt  UMamba_24124056_0.err  UMamba_24124056_0.txt  UMamba_24124056_1.err  UMamba_24124056_1.txt  UMamba_24124056_2.err  UMamba_24124056_2.txt  UMamba_24124056_3.err  UMamba_24124056_3.txt  UMamba_24124056_4.err  UMamba_24124056_4.txt  nnunet_24124054_0.err  nnunet_24124054_0.txt  nnunet_24124054_1.err  nnunet_24124054_1.txt  nnunet_24124054_2.err  nnunet_24124054_2.txt  nnunet_24124054_3.err  nnunet_24124054_3.txt  nnunet_24124054_4.err  nnunet_24124054_4.txt
picai_nnunet/: .gitignore  ablation_cam_3d.py  captum_xai.py  compute_zone_crops.py  job.slurm  pyproject.toml  single_test.py  visualize_attribution.ipynb  visualize_zones_original.ipynb
picai_nnunet/nnUNet/nnunet/: __init__.py
src/: utils.py
src/metrics/: charts.py  compute.py  progress.py
src/models/: loader.py  preprocessing.py
src/pipeline/: monai_processor.py  nnunet_processor.py
src/xai/: forward_wrappers.py  occlusion.py
src/zones/: zones.py
web/: app.py
web/templates/: base.html  case.html  index.html  model.html
(+4 files in other folders)
