[project]
name = "master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "picai-nnunet-xai",
    "umamba",
    "flask>=3.0",
    "memory-profiler>=0.61.0",
    "objgraph>=3.6.2",
]

[tool.uv.sources]
picai-nnunet-xai = { path = "picai_nnunet", editable = true }
umamba = { path = "U_MambaMTL_XAI", editable = true }

